[package]
edition = "2021"
name = "maximized_macros"
version = "0.1.0"

[lib]
crate-type = ["proc-macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maximized = {path = "../maximized"}
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
