[package]
edition = "2018"
name = "maximized_macros_test"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]
name = "maximized_macros_test"

[dependencies]
borsh = "0.9"
maximized = {path = "../maximized"}
maximized_macros = {path = "../maximized_macros"}
